--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <ul>
         <li>Finish HTML Basics</li>
         <li>Learn CSS Basics</li>
-        <li>Understand Flexbox und Position Absolut</li>
+        <li>Understand CSS Flexbox und Position Absolute</li>
     </ul>
+    <a href="./about_me.html">About Me Page</a>
+    <hr>
+    <footer><h4>Copyright by Alex</h4></footer>
 </body>
 </html>
