--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Learn CSS Basics</li>
         <li>Understand CSS Flexbox und Position Absolute</li>
     </ul>
-    <a href="./about_me.html">About Me Page</a>
+    <a href="../simongamebyalex/index.html">Simon Game</a>
     <hr>
     <footer><h4>Copyright by Alex</h4></footer>
 </body>
